manifests/common/istio-resources/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: os4ml-gateway
  namespace: os4ml
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - "$OS4ML_DNS_NAME"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: os4ml-ingress-cert
      hosts:
        - "$OS4ML_DNS_NAME"
