manifests/common/istio-resources/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: os4ml-dex
  namespace: os4ml
spec:
  gateways:
    - os4ml/os4ml-gateway
  hosts:
    - '*'
  http:
    - name: "dex-auth-route"
      match:
        - uri:
            prefix: /dex/
      route:
        - destination:
            host: dex.auth.svc.cluster.local
            port:
              number: 5556
